--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
+    "next-sanity": "^5.5.10",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.20.0",
+    "styled-components": "^6.1.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
